# obs-pulse-multichannel-input

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docker-build.yml  main.yml
ci/: plugin.spec
src/: plugin-main.c  pulse-input-multichannel.c
